Update for Payara 7.
Also includes various bits of cleanup and adjustments to allow running on
payara-server-remote, payara-server-managed, and payara-server-embedded profiles

Signed-off-by: Andrew Pielage <pandrex247@hotmail.com>