@@ -23,7 +23,6 @@
 
         <!-- Arquillian Dependencies -->
         <arquillian.version>1.7.0.Alpha10</arquillian.version>
-        <payara.arquillian.version>3.0.alpha6</payara.arquillian.version>
 
         <!-- Primefaces Dependencies -->
         <primefaces.version>11.0.0</primefaces.version>
@@ -37,13 +36,10 @@
         <cargo.version>1.6.7</cargo.version>
         <java.ee.version>9.1.0</java.ee.version>
 
-        <!-- Embedded Dependencies -->
-        <json.version>1.1.2</json.version>
-        <moxy.version>2.7.1</moxy.version>
-        <h2.version>1.4.196</h2.version>
-        <payara.version>6.2022.1.Alpha4</payara.version>
+        <payara.version>7.2024.1-SNAPSHOT</payara.version>
         <data.source.class-name>org.h2.Driver</data.source.class-name> 
-        <data.source.url>jdbc:h2:./tmp/cargo-tracker-database;AUTO_SERVER=TRUE</data.source.url>      
+        <data.source.url>jdbc:h2:./tmp/cargo-tracker-database;AUTO_SERVER=TRUE</data.source.url>
+        <payara.version.major>7</payara.version.major>
     </properties>
 
     <repositories>
@@ -56,6 +52,18 @@
             </releases>
             <snapshots>
                 <enabled>false</enabled>
+            </snapshots>
+        </repository>
+
+        <repository>
+            <id>payara-nexus-snapshots</id>
+            <name>Payara Snapshots</name>
+            <url>https://nexus.dev.payara.fish/repository/payara-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
             </snapshots>
         </repository>
 
@@ -159,6 +167,14 @@
             <scope>test</scope>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -204,41 +220,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>javax.annotation</groupId>
-                        <artifactId>javax.annotation-api</artifactId>
-                        <version>1.3.1</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
 
     <profiles>
-
-        <profile>
-            <id>jdk11</id>
-            <activation>
-                <jdk>11</jdk>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>jakarta.xml.bind</groupId>
-                    <artifactId>jakarta.xml.bind-api</artifactId>
-                    <version>2.3.2</version>
-                </dependency>
-                <dependency>
-                    <groupId>jakarta.activation</groupId>
-                    <artifactId>jakarta.activation-api</artifactId>
-                    <version>1.2.1</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
         <!-- Payara specific version of build -->
-
-
         <profile>
             <id>payara-server-remote</id>
             <activation>
@@ -250,7 +237,10 @@
                     <groupId>fish.payara.arquillian</groupId>
                     <artifactId>arquillian-payara-server-remote</artifactId>
                     <scope>test</scope>
-                    <version>${payara.arquillian.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>fish.payara.arquillian</groupId>
+                    <artifactId>payara-client-ee9</artifactId>
                 </dependency>
             </dependencies>
             <build>
@@ -280,13 +270,11 @@
                     <groupId>fish.payara.arquillian</groupId>
                     <artifactId>arquillian-payara-server-embedded</artifactId>
                     <scope>test</scope>
-                    <version>${payara.arquillian.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>fish.payara.extras</groupId>
                     <artifactId>payara-embedded-all</artifactId>
                     <scope>test</scope>
-                    <version>${payara.arquillian.version}</version>
                 </dependency>
 
                 <!-- Provided dependencies to prevent classloading issues -->
@@ -300,11 +288,43 @@
                     <artifactId>jersey-common</artifactId>
                     <scope>provided</scope>
                 </dependency>
+
+                <dependency>
+                    <groupId>fish.payara.arquillian</groupId>
+                    <artifactId>payara-client-ee9</artifactId>
+                </dependency>
             </dependencies>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                --add-modules java.se
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.net=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-opens=java.management/sun.management=ALL-UNNAMED
+                                --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                                --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <profile>
             <id>payara-server-managed</id>
+
+            <properties>
+                <payara.directory.name>payara7</payara.directory.name>
+            </properties>
 
             <dependencies>
                 <!-- The actual Arquillian connector -->
@@ -312,7 +332,10 @@
                     <groupId>fish.payara.arquillian</groupId>
                     <artifactId>arquillian-payara-server-managed</artifactId>
                     <scope>test</scope>
-                    <version>${payara.arquillian.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>fish.payara.arquillian</groupId>
+                    <artifactId>payara-client-ee9</artifactId>
                 </dependency>
             </dependencies>
 
@@ -349,19 +372,8 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>javax.annotation</groupId>
-                                    <artifactId>javax.annotation-api</artifactId>
-                                    <version>1.3.1</version>
-                                </dependency>
-                            </dependencies>
-                            <environmentVariables>
-                                <GLASSFISH_HOME>${session.executionRootDirectory}/target/${payara.directory.name}</GLASSFISH_HOME>
-                            </environmentVariables>
-                            <!-- This needs tuning -->
                             <systemPropertyVariables>
-                                <glassfishRemote_gfHome>${session.executionRootDirectory}/target/${payara.directory.name}</glassfishRemote_gfHome>
+                                <payara.home>${session.executionRootDirectory}/target/${payara.directory.name}</payara.home>
                                 <arquillian.launch>payara</arquillian.launch>
                             </systemPropertyVariables>
                         </configuration>
@@ -369,49 +381,6 @@
                 </plugins>
             </build>
         </profile>
-
-        <profile>
-            <id>Payara Community</id>
-            <activation>
-                <property>
-                    <name>payara.version</name>
-                    <value>/^[5-9]\.[0-9]{4}\.[0-9].*/</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>fish.payara.arquillian</groupId>
-                    <artifactId>payara-client-ee9</artifactId>
-                    <version>${payara.arquillian.version}</version>
-                </dependency>
-            </dependencies>
-            <properties>
-                <payara.directory.name>payara6</payara.directory.name>
-                <payara.version.major>6</payara.version.major>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>Payara Enterprise</id>
-            <activation>
-                <property>
-                    <name>payara.version</name>
-                    <value>/^[5-9]\.[0-9]{1,2}\.[0-9].*/</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>fish.payara.arquillian</groupId>
-                    <artifactId>payara-client-ee9</artifactId>
-                    <version>${payara.arquillian.version}</version>
-                </dependency>
-            </dependencies>
-            <properties>
-                <payara.directory.name>payara6</payara.directory.name>
-                <payara.version.major>6</payara.version.major>
-            </properties>
-        </profile>
-
     </profiles>
 
 </project>
